[package]
name = "qdb-core"
version = "0.1.0"
authors = ["VaskillerDev <Vaskoooo9241@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qdb-ast = {git="https://github.com/VaskillerDev/qdb-ast.git"}
rbtree = "0.1.5"